force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/breg_WEB_WEB_FILING_INFO__c.object-meta.xml
<CustomObject>
    <label>WEB FILING INFO</label>
    <nameField>
        <label>WEB FILING INFO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WEB FILING INFOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>