force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_Mapped_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Mapped_Date__c</fullName>
    <label>Mapped Date</label>
    <type>DateTime</type>
</CustomField>