force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_Mapping_Log__c.field-meta.xml
<CustomField>
    <fullName>breg_Mapping_Log__c</fullName>
    <label>Mapping Log</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>