force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_Mapping_Status__c.field-meta.xml
<CustomField>
    <fullName>breg_Mapping_Status__c</fullName>
    <label>Mapping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>