force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>WEB FILING INFOs</relationshipLabel>
    <relationshipName>WEB_FILING_INFOs</relationshipName>
    <type>Lookup</type>
</CustomField>