force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_CONTACT_ADDR2__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_CONTACT_ADDR2__c</fullName>
    <label>CONTACT ADDR2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>