force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_CONTACT_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_CONTACT_EMAIL__c</fullName>
    <label>CONTACT EMAIL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>