force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_CONTACT_FAX__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_CONTACT_FAX__c</fullName>
    <label>CONTACT FAX</label>
    <length>30</length>
    <type>Text</type>
</CustomField>