force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_FEE_AMT_NET__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_FEE_AMT_NET__c</fullName>
    <label>FEE AMT NET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>