force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_FORM_TYPE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_FORM_TYPE__c</fullName>
    <label>FORM TYPE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>