force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_HIC_REF_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_HIC_REF_ID__c</fullName>
    <label>HIC REF ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>