force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_PDF_PAGES__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_PDF_PAGES__c</fullName>
    <label>PDF PAGES</label>
    <length>3</length>
    <type>Text</type>
</CustomField>