force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_RDPMS_WFCAPTURE_BARCODE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_RDPMS_WFCAPTURE_BARCODE__c</fullName>
    <label>RDPMS WFCAPTURE BARCODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>