force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_RDPMS_WFCOMPANY_NAME__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_RDPMS_WFCOMPANY_NAME__c</fullName>
    <label>RDPMS WFCOMPANY NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>