force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_RDPMS_WFEXP_REG1__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_RDPMS_WFEXP_REG1__c</fullName>
    <label>RDPMS WFEXP REG1</label>
    <length>1</length>
    <type>Text</type>
</CustomField>