force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_RDPMS_WFNEW_NAME__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_RDPMS_WFNEW_NAME__c</fullName>
    <label>RDPMS WFNEW NAME</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>