force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_RDPMS_WFNO_CHANGE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_RDPMS_WFNO_CHANGE__c</fullName>
    <label>RDPMS WFNO CHANGE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>