force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_RDPMS_WFNOTIFY_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_RDPMS_WFNOTIFY_EMAIL__c</fullName>
    <label>RDPMS WFNOTIFY EMAIL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>