force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_RDPMS_WFRECEIVE_DATE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_RDPMS_WFRECEIVE_DATE__c</fullName>
    <label>RDPMS WFRECEIVE DATE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>