force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_RDPMS_WFSCAN_TIME__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_RDPMS_WFSCAN_TIME__c</fullName>
    <label>RDPMS WFSCAN TIME</label>
    <length>10</length>
    <type>Text</type>
</CustomField>