force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_RDPMS_WFT8__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_RDPMS_WFT8__c</fullName>
    <label>RDPMS WFT8</label>
    <length>15</length>
    <type>Text</type>
</CustomField>