force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_RDPMS_WFYEAR__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_RDPMS_WFYEAR__c</fullName>
    <label>RDPMS WFYEAR</label>
    <length>4</length>
    <type>Text</type>
</CustomField>