force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_RENEWAL_NOTICE_VIA_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_RENEWAL_NOTICE_VIA_EMAIL__c</fullName>
    <label>RENEWAL NOTICE VIA EMAIL</label>
    <length>1</length>
    <type>Text</type>
</CustomField>