force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_SUBMISSION_DT__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_SUBMISSION_DT__c</fullName>
    <label>SUBMISSION DT</label>
    <type>Date</type>
</CustomField>