force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_SUBMITTER_NAME__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_SUBMITTER_NAME__c</fullName>
    <label>SUBMITTER NAME</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>