force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_SUBMITTER_SIGNATURE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_SUBMITTER_SIGNATURE__c</fullName>
    <label>SUBMITTER SIGNATURE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>