force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_SUBMITTER_TITLE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_SUBMITTER_TITLE__c</fullName>
    <label>SUBMITTER TITLE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>