force-app/main/default/objects/breg_WEB_WEB_FILING_INFO__c/fields/breg_WEB_WEB_NO_CHANGE_FL__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_WEB_NO_CHANGE_FL__c</fullName>
    <label>WEB NO CHANGE FL</label>
    <length>1</length>
    <type>Text</type>
</CustomField>